# shell

./: Cargo.toml  index.html  wasm-launcher-30a5bd54356703db.js  wasm-launcher-47f66425377a7dac.js
.github/workflows/: release-gh-pages.yml
client/odyc_camera/: Cargo.toml
client/odyc_camera/src/: lib.rs
client/odyc_core/: Cargo.toml
client/odyc_core/src/: lib.rs
client/odyc_player/: Cargo.toml
client/odyc_player/src/: lib.rs
client/odyc_ui/: Cargo.toml
client/odyc_ui/src/: lib.rs
client/odyc_world/: Cargo.toml
client/odyc_world/src/: lib.rs
src/: lib.rs
