[package]
name = "my-game"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
    "client/odyc_camera",
    "client/odyc_core",
    "client/odyc_player",
    "client/odyc_ui",
    "client/odyc_world",
]

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.8.0"
image = "0.24.5"
winit = "0.26.1"
odyc = { path = "client/odyc_core" }
